# CookieClicker

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Cargo.toml  CookieClicker.sln  Dockerfile  PrivacyPolicy.md  README.md  Readme.md  TermsOfService.md  docker-compose.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-commit.yml  build-pr.yml  release.yml  resources.yml  test-commit.yml  test-pr.yml
res/: config.json
src/: CookieClicker.csproj  CookieTracker.cs  DiscordSlashCommandHandler.cs  Ed25519.cs  HttpLogger.cs  Program.cs  RouteDispatcher.cs  SerilogUtilities.cs  main.rs
src/Attributes/: AutoCompleteAttribute.cs  CommandAttribute.cs  CommandOptionAttribute.cs  RequirePermissionAttribute.cs
src/Commands/: CookieCommand.cs
src/Database/: CookieDatabaseContext.cs  SnowflakeConverter.cs
src/Entities/: CachedCookie.cs  Cookie.cs  DatabaseOperation.cs  HttpError.cs
src/GenHTTP/: JsonErrorMapper.cs  SerilogCompanion.cs
src/GenHttp/: JsonErrorMapper.cs  SerilogCompanion.cs
src/Headers/: DiscordHeaderAuthentication.cs  DiscordUser.cs  Ed25519.cs  SerilogCompanion.cs
src/Migrations/: .editorconfig  20230502055445_0.1.0.Designer.cs  20230502055445_0.1.0.cs  20230523080915_0.4.0-alpha_channel_info.Designer.cs  20230523080915_0.4.0-alpha_channel_info.cs  CookieDatabaseContextModelSnapshot.cs
src/Responders/: DiscordHeaderVerifier.cs  DiscordInteractionRoute.cs  Router.cs
src/Routes/: Create.cs
src/api/: discord.rs
tools/: generate-assets.sh  generateAssets.sh
(+20 files in other folders)
