[package]
name = "cookie_crusher"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-compact = { version = "2.0.4", features = ["ed25519", "traits"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
